deploy/manual/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghiras-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'ghiras-cms-dev'
  namespace: 'ghiras-dev'
  labels:
    project: 'ghiras'
    environment: 'dev'
    componenet: 'cms'
    application: 'ghiras-cms-dev'
    version: 'ed41'
spec:
  replicas: 1
  selector:
    matchLabels:
      application: 'ghiras-cms-dev'
  template:
    metadata:
      labels:
        project: 'ghiras'
        environment: 'dev'
        componenet: 'cms'
        application: 'ghiras-cms-dev'
    spec:
      containers:
        - name: 'ghiras-cms-dev'
          image: 'm3ntorshipci/ghiras-cms:ed41'
          ports:
            - name: web
              containerPort: 1337
              protocol: TCP
        - name: 'ghiras-cms-dev-ar'
          image: 'm3ntorshipci/ghiras-cms:ed41'
          ports:
            - name: web-ar
              containerPort: 1338
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: 'ghiras-cms-dev'
  namespace: 'ghiras-dev'
  labels:
    project: 'ghiras'
    environment: 'dev'
    componenet: 'cms'
    application: 'ghiras-cms-dev'
    version: 'ed41'
spec:
  selector:
    application: 'ghiras-cms-dev'
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 1337
    - name: web-ar
      protocol: TCP
      port: 81
      targetPort: 1338
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'ghiras-cms-dev'
  namespace: 'ghiras-dev'
  labels:
    project: 'ghiras'
    environment: 'dev'
    componenet: 'cms'
    application: 'ghiras-cms-dev'
    version: 'ed41'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
    - host: 'ghiras-cms-dev.m3ntorship.net'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 'ghiras-cms-dev'
                port:
                  number: 80
    - host: 'ghiras-cms-dev-ar.m3ntorship.net'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 'ghiras-cms-dev'
                port:
                  number: 81
